--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:e2e": "npx playwright test"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "express": "^4.18.2",
     "next": "latest",
     "react": "latest",
