--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
             - name: Install dependencies
               run: npm ci
             - name: Test code
-              run: npm run test
+              run: npm run test:unit
     build:
         needs: test
         runs-on: ubuntu-latest
