--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "express": "^4.18.2",
     "next": "latest",
+    "prettier": "^3.2.4",
     "react": "latest",
     "react-dom": "latest"
   },
