--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^5.10.2",
     "express": "^4.18.2",
     "next": "latest",
     "prettier": "^3.2.4",
@@ -28,7 +29,7 @@
     "@types/chai": "^4.3.6",
     "@types/express": "^4.17.18",
     "@types/mocha": "^10.0.2",
-    "@types/node": "latest",
+    "@types/node": "^20.11.25",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
@@ -40,9 +41,10 @@
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "postcss": "latest",
+    "prisma": "^5.10.2",
     "tailwindcss": "latest",
     "ts-mocha": "^10.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
