--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^5.10.2",
+    "ajv": "^8.12.0",
     "express": "^4.18.2",
     "next": "latest",
     "prettier": "^3.2.4",
